[tool.poetry]
name = "scikit-quri"
version = "0.1.0"
description = ""
authors = ["Qulacs-Osaka <qulacs.osaka@gmail.com>"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Qulacs-Osaka/scikit-quri"
homepage = "https://github.com/Qulacs-Osaka/scikit-quri"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
