[tool.poetry]
name = "scikit-quri"
version = "1.1.0"
description = ""
authors = ["Qulacs-Osaka <qulacs.osaka@gmail.com>"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Qulacs-Osaka/scikit-quri"
homepage = "https://github.com/Qulacs-Osaka/scikit-quri"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
quri-parts = {version = "^0.22.0", extras = ["qulacs"]}
scikit-learn = "^1.4.0"
matplotlib = "^3.8.4"
pandas = "^2.2.3"
seaborn = "^0.13.2"
quri-parts-openfermion = "^0.23.0"
quri-parts-oqtopus = "^1.0.3"
pre-commit = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.11.11"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
Sphinx = "^5.2.3"
sphinx-book-theme = "^1.0.1"
ipykernel = "^6.16.0"
myst-nb = ">=1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["NPY201"]

[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.10"
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true