[project]
name = "scikit-quri"
version = "1.1.0"
description = ""
authors = [{ name = "Qulacs-Osaka", email = "qulacs.osaka@gmail.com" }]
requires-python = ">=3.10,<3.12"
readme = "./README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "scikit-learn>=1.4.0,<2",
    "quri-parts-openfermion>=0.23.0,<0.24",
    "quri-parts-oqtopus>=1.0.3,<2",
    "quri-parts==0.24.1",
]

[project.urls]
Homepage = "https://github.com/Qulacs-Osaka/scikit-quri"
Repository = "https://github.com/Qulacs-Osaka/scikit-quri"

[project.optional-dependencies]
qulacs = [
    "quri-parts>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4,<8",
    "ruff>=0.11.11,<0.12",
    "mypy>=1.8.0,<2",
    "pytest-cov>=4.1.0,<5",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "pre-commit>=4.5.0",
]
doc = [
    "Sphinx>=5.2.3,<6",
    "sphinx-book-theme>=1.0.1,<2",
    "ipykernel>=6.16.0,<7",
    "myst-nb>=1.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["NPY201"]

[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.10"
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
